# figurex

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  conf.py  examples.ipynb  index.rst  pyproject.toml  requirements.txt  setup.py  test.py
_build/doctrees/: environment.pickle  index.doctree
_build/doctrees/docs/source/: index.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/html/docs/source/: index.html
docs/: conf.py  index.rst  requirements.txt
docs/source/: conf.py
figurenv/: figure.py
figurex/: __init__.py  basemap.py  cartopy.py  figure.py
figurex/geo/: figure.py
tests/: test_figure.py  test_geofigure.py
